; ModuleID = '/home/carl/AnghaBench/jq/src/extr_jv_dtoa.c_jvp_dtoa_context_init.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_jv_dtoa.c_jvp_dtoa_context_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dtoa_context = type { i64, i64* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @jvp_dtoa_context_init(%struct.dtoa_context* %0) #0 {
  %2 = alloca %struct.dtoa_context*, align 8
  %3 = alloca i32, align 4
  store %struct.dtoa_context* %0, %struct.dtoa_context** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %14, %1
  %5 = load i32, i32* %3, align 4
  %6 = icmp slt i32 %5, 1
  br i1 %6, label %7, label %17

7:                                                ; preds = %4
  %8 = load %struct.dtoa_context*, %struct.dtoa_context** %2, align 8
  %9 = getelementptr inbounds %struct.dtoa_context, %struct.dtoa_context* %8, i32 0, i32 1
  %10 = load i64*, i64** %9, align 8
  %11 = load i32, i32* %3, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds i64, i64* %10, i64 %12
  store i64 0, i64* %13, align 8
  br label %14

14:                                               ; preds = %7
  %15 = load i32, i32* %3, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %3, align 4
  br label %4

17:                                               ; preds = %4
  %18 = load %struct.dtoa_context*, %struct.dtoa_context** %2, align 8
  %19 = getelementptr inbounds %struct.dtoa_context, %struct.dtoa_context* %18, i32 0, i32 0
  store i64 0, i64* %19, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
